# auto_generation_pytest

./: .env  README.md  demo.json  pyproject.toml  test.py
auto_generation_pytest/: __init__.py  cli.py  create.py  get_case.py  grpcrequests.py  httprequests.py  inhert.py  pyproject.toml  template.py  utlis.py
auto_generation_pytest/auto_generation_pytest/: create.py  get_case.py  grpcrequests.py  inhert.py  template.py  utlis.py
auto_generation_pytest/auto_generation_pytest/combination/: __init__.py  combination_case.py
auto_generation_pytest/combination/: __init__.py  combination_case.py  combination_inhert.py
auto_generation_pytest/demo/: demo.py  demo_grpc.json
auto_generation_pytest/proxy/: dump.py  res_filter.py  save.py
demo/: demo_grpc.json  demo_http.json
demo/data/: demo_grpc.json  demo_http.json
demo/testcase/: test_demo_grpc.py  test_demo_http.py
test/: filter.yaml  test.py
utlis/: get_case.py  httprequests.py  inhert.py  template.py  utlis.py
utlis/combination/: combination_case.py  combination_inhert.py
